** Fix divide-by-zero in 'shape.Line' when length is 0
** Fix bug in 'Canvas.__init__'
** Fix blit location bug in 'Canvas.snapshot'
** Drag slider knob from any point rather than only the center
** Default knob size based on number of steps
** Allow clipboard paste into text input
** Add support for selection, copy, cut, and paste operations in 'TextInput'
** Add 'sc8pr.examples.vector2d'
** TextInput use tk clipboard
* Add 'Canvas.clipArea', 'Canvas.resizeContent'
* Allow 'Canvas.__isub__' to accept a string; add 'Canvas.removeItems'
* 'Video.__getitem__' accepts slices and calls 'Video.clip'
* 'Video.clip' accepts negative 'start' and 'end' arguments
* Add 'Slider.methodNames'
* 'Plot.clockwise' and 'Plot.units' properties
* 'Plot' constructor can take an object with 'size' attribute in place of a size literal
* Sync video capture when sketch does not run at nominal frame rate
* Standardize attributes (target, focus, hover, handler) for sc8pr events
* Replace 'Canvas.grid' by 'Table.grid'
* Normalize examples to use 'play' as name of main function
* Move Grabber and ImageIO classes to sc8pr.misc.media
* FFReader and FFWriter classes
* Move 'cover' method from 'Sketch' class to 'Canvas'
* Modify 'sc8pr.gui.dialog'
* Ignore collisions for sprites with no 'rect' attribute
* Fix delay on moving 'TextInput' cursor after CLICK
* Fix bug where BLUR event does not fire when focus changes while the focussed graphic is being dragged
* Fire all DRAW events after drawing the entire sketch is complete.
* DRAG and RELEASE events apply to Sketch
* Create Dialog base class in 'sc8pr.gui.dialog'
* 'CostumeImage.costumeTime' may be negative for reverse playback
* Change 'MessageBox' text input to 'TextInputCanvas'
* Change 'deleteRect' argument default to False in 'Graphic.remove' and 'Renderable.remove'
* Change CLICK event to MOUSEDOWN and implement a new CLICK event (after MOUSEUP only when on the same item); affects GUI controls that handle MOUSEDOWN